syntax = "proto3";
package ddd_err.account;
option go_package = "./account";

service UserService {
  rpc FindUserByID(FindUserByIDRequest) returns (FindUserByIDResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message FindUserByIDRequest {
  string id = 1;
}

message FindUserByIDResponse {
  string id = 1;
  string username = 2;
  Error error = 3;
}

message CreateUserRequest {
  string username = 1;
}

message CreateUserResponse {
  Error error = 1;
}

service GroupService {
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);
}

message CreateGroupRequest {
  string name = 1;
}

message CreateGroupResponse {
  Error error = 1;
}

message Error {
  string message = 1;
  string code = 2;
}
