syntax = "proto3";
package ddd_auth.auth;
option go_package = "./auth";

service PermissionService {
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);
}

message ListPermissionsRequest {
  string user_id = 1;
}

message ListPermissionsResponse {
  message Permission {
    string name = 1;
    string codename = 2;
  }
  repeated Permission permissions = 1;
  Error error = 2;
}

message Error {
  string message = 1;
  string code = 2;
}
